include/tensor.h

/* ── device residency ─────────────────────────────────────────────
 * CF_DEVICE_CPU: t->data is a host pointer, all ops run as before.
 * CF_DEVICE_GPU: t->data is a CUDA device pointer. Do NOT dereference
 *                it from host code (T1/T2 macros, tensor_get, etc.
 *                are only valid on CPU tensors) — copy back with
 *                tensor_to_cpu() first.
 * Built WITHOUT -DUSE_CUDA, tensor_to_gpu()/tensor_to_cpu() are still
 * declared but calling them is a hard error (cforge_error), so
 * existing CPU-only code and builds are completely unaffected.    */
typedef enum {
    CF_DEVICE_CPU = 0,
    CF_DEVICE_GPU = 1
} CF_Device;
/* Which GPU backend a CF_DEVICE_GPU tensor's `data` pointer belongs
 * to. Meaningless when device == CF_DEVICE_CPU.
 *   CF_GPU_CUDA:   data is a raw CUDA device pointer (cudaMalloc'd)
 *   CF_GPU_OPENCL: data is a `cl_mem` handle, reinterpret-cast to
 *                  float* (cl_mem is itself just an opaque pointer,
 *                  so this is a same-size, valid cast — see
 *                  opencl_backend.c) */
typedef enum {
    CF_GPU_NONE   = 0,
    CF_GPU_CUDA   = 1,
    CF_GPU_OPENCL = 2
} CF_GpuBackend;
typedef struct {
    float  *data;           /* flat row-major data buffer          */
    int     shape[TENSOR_MAX_DIMS];
    int     ndim;           /* number of dimensions                */
    size_t  size;           /* total number of elements            */
    int     owns_data;      /* 1 = free data on tensor_free()      */
    CF_Device     device;      /* CF_DEVICE_CPU or CF_DEVICE_GPU   */
    CF_GpuBackend gpu_backend;  /* which GPU backend, if any       */
} Tensor;
/* ── lifecycle ─────────────────────────────────────────────────── */
Tensor *tensor_create(const int *shape, int ndim);
Tensor *tensor_zeros(const int *shape, int ndim);
Tensor *tensor_clone(const Tensor *t);
void    tensor_free(Tensor *t);
/* ── element-wise ops (result written to out; out may == a or b) ─ */
void tensor_add(const Tensor *a, const Tensor *b, Tensor *out);
/* ── reductions ────────────────────────────────────────────────── */
float tensor_sum(const Tensor *t);
float tensor_mean(const Tensor *t);
/* ── argmax / argmin ────────────────────────────────────────────── */
/* tensor_argmax: index of max value across entire tensor           */
int   tensor_argmax(const Tensor *t);
/* ── matrix ops (2-D tensors) ──────────────────────────────────── */
void tensor_matmul(const Tensor *a, const Tensor *b, Tensor *out);
void    tensor_fill(Tensor *t, float val);
void    tensor_copy_data(Tensor *dst, const Tensor *src);